tests/invalid_semantic/type_mismatch.mc
int main() {
    bool ok;
    ok = 3 + 4;
    return 0;
}
